mi primer cambio

--- a/acerca de.html
+++ b/acerca de.html
@@ -28,6 +28,12 @@
                 <p>¡Bienvenido a nuestra página. Aquí, aprenderás más sobre nuestra 
                      empresa y los servicios que ofrecemos.</p>        
             </div>
+           
+            <div class="greeting">
+              <p>Esta es la pagina de WA_SHOP</p>
+            </div>
+            
+
             <div class="img-container">
                 <img class="imagen" src="/Mi primer website/imagenes/Tienda.png" alt="logo ">
                 <img class="imagen2" src="/Mi primer website/imagenes/Bonito dia.png" alt="Bonito ">
